--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,7 @@
 }
 
 body {
-  max-width: 100%;
-  min-width: 100%;
-  background: radial-gradient(at right, #3f2812, #121212) no-repeat;
+  background: radial-gradient(#3f2812, #121212) no-repeat;
 }
 
 #testimonials-list .item {
